--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,9 +1,12 @@
 .main_content {
   margin: auto;
   width: 70%;
-  display: flex;
   height: 100%;
   background-color: #e07a5f;
   justify-content: center;
   height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
