--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -2,7 +2,7 @@
   margin: auto;
   width: 70%;
   height: 100%;
-  background-color: #e07a5f;
+  background-color: #C1D7AE;
   justify-content: center;
   height: calc(100% - 50px);
   display: flex;
