--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -1,12 +1,16 @@
-.main_content {
-  margin: auto;
-  width: 70%;
-  height: 100%;
-  background-color: #C1D7AE;
+.mainContent {
   justify-content: center;
   height: calc(100% - 50px);
+  overflow: auto;
+  padding: 0 15% 0 15%;
+}
+
+#mainContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  background-color: #c1d7ae;
+  height: auto !important;
+  min-height: 100%;
 }
