--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mainContent {
+  justify-content: center;
+  height: calc(100% - 50px);
+  overflow: auto;
+  padding: 0 15% 0 15%;
+}
