--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -5,24 +5,33 @@
   justify-content: flex-start;
   height: auto !important;
   min-height: 100%;
+  width: 100%;
 }
 
 #bestPosts {
   display: flex;
   width: 100%;
   justify-content: space-around;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
 .bestPostCard {
   position: relative;
   text-align: center;
   color: white;
-  width: 35%;
+  width: 50%;
+  height: 25%;
   padding: 2% 2%;
+  background-position: "center";
+  background-size: "cover";
+  background-repeat: "no-repeat";
 }
 
 #title {
-  transition: .5s ease;
+  transition: 0.5s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -32,19 +41,19 @@
   text-align: center;
 }
 
-#image{
+#image {
   opacity: 1;
   display: block;
   width: 100%;
   height: 100%;
-  transition: .5s ease;
+  transition: 0.5s ease;
   backface-visibility: hidden;
 }
 
-.bestPostCard:hover #image{
+.bestPostCard:hover #image {
   opacity: 0.3;
 }
-.bestPostCard:hover #title{
+.bestPostCard:hover #title {
   opacity: 1;
   background-color: #8cc084;
   color: #3d405b;
