details page finished

--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -1,34 +1,52 @@
-/* #cardContainer {
-  margin-top: 40px;
+.cardContainer {
   width: 80%;
-} */
+}
 
-/* #postCardForm {
+.postCardForm {
   padding: 30px;
-  /* margin-bottom: 20px;
-  margin-top: 20px; */
-/*   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  margin: 40px auto;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
   background-color: #ffcab1;
-  border-radius: 10px; 
-} */
+  border-radius: 10px;
+}
 
-/* #cardField {
+.cardField {
   padding: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-} */
+}
 
-/* #title {
+legend {
   font-size: 18px;
   color: #3d405b;
-} */
+}
 
-/* #description {
+#image {
   width: 100%;
-  padding: 7px;
-} */
+  border-radius: 2%;
+}
 
-detailsContainer {
-  background-color: brown;
+#description {
+  padding: 7px;
+}
+
+.actions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.actions > *{
+  padding: 0 5%;
+  margin: 0 2%;
+}
+
+button{
+  background-color: #8cc084;
+  border-radius: 10%;
+  color: #3d405b;
+  font-size: 16px;
+  padding: 16px 32px;
+  cursor: pointer;
 }
