--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -15,6 +15,7 @@
   padding: 30px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 legend {
@@ -27,26 +28,23 @@ legend {
   border-radius: 2%;
 }
 
-#description {
-  padding: 7px;
-}
-
 .actions {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.actions > *{
+.actions > * {
   padding: 0 5%;
   margin: 0 2%;
 }
 
-button{
+.button {
   background-color: #8cc084;
   border-radius: 10%;
   color: #3d405b;
   font-size: 16px;
   padding: 16px 32px;
   cursor: pointer;
+  text-decoration: none;
 }
