--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   font-family: 'Karla', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ECDCB0;
+  background-color: #B6DDE0;
 }
 
 code {
