--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -7,7 +7,7 @@
     margin: 40px auto;
     margin-bottom: 20px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-    background-color: #ffcab1;
+    background-color: #E0CDCC;
     border-radius: 10px;
   }
   
@@ -44,10 +44,10 @@
   
   .buttonSubmit {
     padding: 19px 39px 18px 39px;
-    background: #8cc084;
+    background: #FF0;
     font-size: 18px;
     width: 100%;
-    border: 1px solid #7ba874;
+    border: 1px solid #dfcf03;
     border-width: 1px 1px 3px;
     margin: 10px 0 10px 0;
     color: #3d405b;
@@ -58,17 +58,17 @@
   }
   
   .buttonSubmit:hover {
-    background: #7ba874;
+    background: #dfcf03;
   }
   
   .buttonSubmit:focus {
     outline: none;
-    background: #7ba874;
+    background: #dfcf03;
   }
   
   .buttonSubmit:active {
     box-shadow: 0 5px #3d405b;
     transform: translateY(4px);
-    background: #8cc084;
+    background: #FF0;
   }
   
